@@ -137,7 +137,7 @@ public class CloseAllSessionsRequestDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!CloseAllSessionsRequestDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in CloseAllSessionsRequestDto is not found in the empty JSON string", CloseAllSessionsRequestDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in CloseAllSessionsRequestDto is not found in the empty JSON string".formatted(CloseAllSessionsRequestDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -145,12 +145,12 @@ public class CloseAllSessionsRequestDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!CloseAllSessionsRequestDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `CloseAllSessionsRequestDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `CloseAllSessionsRequestDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if ((jsonObj.get("license_id") != null && !jsonObj.get("license_id").isJsonNull()) && !jsonObj.get("license_id").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `license_id` to be a primitive type in the JSON string but got `%s`", jsonObj.get("license_id").toString()));
+        throw new IllegalArgumentException("Expected the field `license_id` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("license_id").toString()));
       }
   }
 
