@@ -712,7 +712,7 @@ public class ProductDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!ProductDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in ProductDto is not found in the empty JSON string", ProductDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in ProductDto is not found in the empty JSON string".formatted(ProductDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -720,38 +720,38 @@ public class ProductDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!ProductDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `ProductDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `ProductDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
 
       // check to make sure all required properties/fields are present in the JSON string
       for (String requiredField : ProductDto.openapiRequiredFields) {
         if (jsonElement.getAsJsonObject().get(requiredField) == null) {
-          throw new IllegalArgumentException(String.format("The required field `%s` is not found in the JSON string: %s", requiredField, jsonElement.toString()));
+          throw new IllegalArgumentException("The required field `%s` is not found in the JSON string: %s".formatted(requiredField, jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if ((jsonObj.get("id") != null && !jsonObj.get("id").isJsonNull()) && !jsonObj.get("id").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `id` to be a primitive type in the JSON string but got `%s`", jsonObj.get("id").toString()));
+        throw new IllegalArgumentException("Expected the field `id` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("id").toString()));
       }
       if (!jsonObj.get("name").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `name` to be a primitive type in the JSON string but got `%s`", jsonObj.get("name").toString()));
+        throw new IllegalArgumentException("Expected the field `name` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("name").toString()));
       }
       if ((jsonObj.get("description") != null && !jsonObj.get("description").isJsonNull()) && !jsonObj.get("description").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `description` to be a primitive type in the JSON string but got `%s`", jsonObj.get("description").toString()));
+        throw new IllegalArgumentException("Expected the field `description` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("description").toString()));
       }
       if ((jsonObj.get("short_description") != null && !jsonObj.get("short_description").isJsonNull()) && !jsonObj.get("short_description").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `short_description` to be a primitive type in the JSON string but got `%s`", jsonObj.get("short_description").toString()));
+        throw new IllegalArgumentException("Expected the field `short_description` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("short_description").toString()));
       }
       if ((jsonObj.get("minimum_software_release_id") != null && !jsonObj.get("minimum_software_release_id").isJsonNull()) && !jsonObj.get("minimum_software_release_id").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `minimum_software_release_id` to be a primitive type in the JSON string but got `%s`", jsonObj.get("minimum_software_release_id").toString()));
+        throw new IllegalArgumentException("Expected the field `minimum_software_release_id` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("minimum_software_release_id").toString()));
       }
       if (jsonObj.get("software_release") != null && !jsonObj.get("software_release").isJsonNull()) {
         JsonArray jsonArraysoftwareRelease = jsonObj.getAsJsonArray("software_release");
         if (jsonArraysoftwareRelease != null) {
           // ensure the json data is an array
           if (!jsonObj.get("software_release").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `software_release` to be an array in the JSON string but got `%s`", jsonObj.get("software_release").toString()));
+            throw new IllegalArgumentException("Expected the field `software_release` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("software_release").toString()));
           }
 
           // validate the optional field `software_release` (array)
@@ -767,7 +767,7 @@ public class ProductDto {
         OfflineLicensing.validateJsonElement(jsonObj.get("offline_licensing"));
       }
       if ((jsonObj.get("license_file_name") != null && !jsonObj.get("license_file_name").isJsonNull()) && !jsonObj.get("license_file_name").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `license_file_name` to be a primitive type in the JSON string but got `%s`", jsonObj.get("license_file_name").toString()));
+        throw new IllegalArgumentException("Expected the field `license_file_name` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("license_file_name").toString()));
       }
       // validate the optional field `user_id_type`
       if (jsonObj.get("user_id_type") != null && !jsonObj.get("user_id_type").isJsonNull()) {
@@ -778,7 +778,7 @@ public class ProductDto {
         ClientIdMode.validateJsonElement(jsonObj.get("client_id_mode"));
       }
       if ((jsonObj.get("last_modified_by") != null && !jsonObj.get("last_modified_by").isJsonNull()) && !jsonObj.get("last_modified_by").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `last_modified_by` to be a primitive type in the JSON string but got `%s`", jsonObj.get("last_modified_by").toString()));
+        throw new IllegalArgumentException("Expected the field `last_modified_by` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("last_modified_by").toString()));
       }
       // validate the optional field `minimum_software_release`
       if (jsonObj.get("minimum_software_release") != null && !jsonObj.get("minimum_software_release").isJsonNull()) {
