@@ -343,7 +343,7 @@ public class SoftwareReleaseLimitationDto {
   public static void validateJsonElement(JsonElement jsonElement) throws IOException {
       if (jsonElement == null) {
         if (!SoftwareReleaseLimitationDto.openapiRequiredFields.isEmpty()) { // has required fields but JSON element is null
-          throw new IllegalArgumentException(String.format("The required field(s) %s in SoftwareReleaseLimitationDto is not found in the empty JSON string", SoftwareReleaseLimitationDto.openapiRequiredFields.toString()));
+          throw new IllegalArgumentException("The required field(s) %s in SoftwareReleaseLimitationDto is not found in the empty JSON string".formatted(SoftwareReleaseLimitationDto.openapiRequiredFields.toString()));
         }
       }
 
@@ -351,28 +351,28 @@ public class SoftwareReleaseLimitationDto {
       // check to see if the JSON string contains additional fields
       for (Map.Entry<String, JsonElement> entry : entries) {
         if (!SoftwareReleaseLimitationDto.openapiFields.contains(entry.getKey())) {
-          throw new IllegalArgumentException(String.format("The field `%s` in the JSON string is not defined in the `SoftwareReleaseLimitationDto` properties. JSON: %s", entry.getKey(), jsonElement.toString()));
+          throw new IllegalArgumentException("The field `%s` in the JSON string is not defined in the `SoftwareReleaseLimitationDto` properties. JSON: %s".formatted(entry.getKey(), jsonElement.toString()));
         }
       }
         JsonObject jsonObj = jsonElement.getAsJsonObject();
       if ((jsonObj.get("id") != null && !jsonObj.get("id").isJsonNull()) && !jsonObj.get("id").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `id` to be a primitive type in the JSON string but got `%s`", jsonObj.get("id").toString()));
+        throw new IllegalArgumentException("Expected the field `id` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("id").toString()));
       }
       if ((jsonObj.get("product_id") != null && !jsonObj.get("product_id").isJsonNull()) && !jsonObj.get("product_id").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `product_id` to be a primitive type in the JSON string but got `%s`", jsonObj.get("product_id").toString()));
+        throw new IllegalArgumentException("Expected the field `product_id` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("product_id").toString()));
       }
       if ((jsonObj.get("software_release") != null && !jsonObj.get("software_release").isJsonNull()) && !jsonObj.get("software_release").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `software_release` to be a primitive type in the JSON string but got `%s`", jsonObj.get("software_release").toString()));
+        throw new IllegalArgumentException("Expected the field `software_release` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("software_release").toString()));
       }
       if ((jsonObj.get("description") != null && !jsonObj.get("description").isJsonNull()) && !jsonObj.get("description").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `description` to be a primitive type in the JSON string but got `%s`", jsonObj.get("description").toString()));
+        throw new IllegalArgumentException("Expected the field `description` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("description").toString()));
       }
       if (jsonObj.get("software_shipments") != null && !jsonObj.get("software_shipments").isJsonNull()) {
         JsonArray jsonArraysoftwareShipments = jsonObj.getAsJsonArray("software_shipments");
         if (jsonArraysoftwareShipments != null) {
           // ensure the json data is an array
           if (!jsonObj.get("software_shipments").isJsonArray()) {
-            throw new IllegalArgumentException(String.format("Expected the field `software_shipments` to be an array in the JSON string but got `%s`", jsonObj.get("software_shipments").toString()));
+            throw new IllegalArgumentException("Expected the field `software_shipments` to be an array in the JSON string but got `%s`".formatted(jsonObj.get("software_shipments").toString()));
           }
 
           // validate the optional field `software_shipments` (array)
@@ -382,7 +382,7 @@ public class SoftwareReleaseLimitationDto {
         }
       }
       if ((jsonObj.get("last_modified_by") != null && !jsonObj.get("last_modified_by").isJsonNull()) && !jsonObj.get("last_modified_by").isJsonPrimitive()) {
-        throw new IllegalArgumentException(String.format("Expected the field `last_modified_by` to be a primitive type in the JSON string but got `%s`", jsonObj.get("last_modified_by").toString()));
+        throw new IllegalArgumentException("Expected the field `last_modified_by` to be a primitive type in the JSON string but got `%s`".formatted(jsonObj.get("last_modified_by").toString()));
       }
   }
 
